fix small alignment problem

--- a/style.css
+++ b/style.css
@@ -113,15 +113,15 @@ a:hover{
 }
 /* Left column */
 .leftcolumn { 
-    /*margin-left: 200px; */
+    margin-top: 22px;
     float: left;
     width: 55%; 
     /*    
     padding-left: 10px;
     padding-right: 20px;*/
     text-align: center;
-    border-style: solid;
-    border-width: 1px;
+    /* border-style: solid;
+    border-width: 1px; */
 }
 /* Right column */
 .rightcolumn {
